manifests/giropops-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giropops-deployment
  labels:
    app: giropops-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: giropops-senhas
  template:
    metadata:
      labels:
        app: giropops-senhas
    spec:
      containers:
      - name: giropops-senhas
        image: filipez/giropops-senhas:1.0
        ports:
        - containerPort: 5000
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: 400m
          limits:
            memory: "128Mi"  
            cpu: 400m
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 5
