manifests/redis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-statefulset
  labels:
    app: redis-statefulset
spec:
  serviceName: redis-headless-service
  replicas: 3
  selector:
    matchLabels:
      app: redis
  template:  
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: cgr.dev/chainguard/redis
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 6379
          name: http
        volumeMounts:
        - name: redis-persistent-storage
          mountPath: /data
      - name: redis-exporter
        image: oliver006/redis_exporter
        ports:
        - containerPort: 9121
          name: exporter-port
  volumeClaimTemplates:
  - metadata:
      name: redis-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 250Mi
