manifests/giropops-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-service
  labels:
    app: giropops-service
spec:
  selector:
    app: giropops-senhas
  ports:
  - port: 5000
    name: http
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
