manifests/redis-headless-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: redis-headless-service
  labels:
    app: redis-headless-service
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
    name: http
  - port: 9121
    targetPort: 9121
    name: exporter-port
  clusterIP: None
