manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-ingress
  labels:
    app: giropops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/affinity: "cookie"  
    nginx.ingress.kubernetes.io/session-cookie-name: "giropops-cookie"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - filipez.me
    - filipez-giropops.eastus.cloudapp.azure.com
    secretName: letsencrypt-prod
  rules:
  - host: filipez.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: giropops-service
            port:
              number: 5000
